dev/db/ Попытка добавить проход тестов в wf